# xpedia

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  customers.json  itineraries.json  users.json
src/: CMakeLists.txt  airCanadaFlightsManager.cpp  airCanadaFlightsManager.h  app.cpp  app.h  app.hpp  backEnd.cpp  backEnd.h  customer.h  customers.json  customersManager.cpp  customersManager.h  database.cpp  database.h  error.cpp  error.h  error.hpp  exception.hpp  flight.h  flightRequest.cpp  flightRequest.h  flightRequestDataReader.h  flightReservation.cpp  flightReservation.h  flightsManager.h  flightsManagerFactory.cpp  flightsManagerFactory.h  frontEnd.cpp  frontEnd.h  idGenerator.cpp  idGenerator.h  inputHandler.cpp  itineraries.json  itinerariesManager.cpp  itinerariesManager.h  itinerary.cpp  itinerary.h  itineraryItem.cpp  itineraryItem.h  itineraryManager.h  (+33 more)
src/APIs/: expedia_flights_api.h  expedia_hotels_api.h  expedia_payments_api.h
src/apis/: expedia_flights_api.hpp  expedia_hotels_api.hpp  expedia_payments_api.hpp
src/application/: CMakeLists.txt  application.cpp  application.hpp  database_interface.hpp  frontend_interface.hpp
src/application/dto/: card_input.hpp  flight_search_input.hpp  hotel_reservation_data.hpp  hotel_search_input.hpp  selected_flight_offer.hpp  selected_hotel_offer.hpp
src/application/factories/: payment_factory.hpp  reservation_factory.cpp  reservation_factory.hpp  reservation_provider_factory.hpp  reservation_request_factory.cpp  reservation_request_factory.hpp
src/application/interfaces/: iflight_search_service.hpp  ihotel_search_service.hpp
src/application/managers/: air_france_flights_manager.cpp  air_france_flights_manager.hpp  british_airways_flights_manager.hpp  flights_manager.hpp  hilton_hotels_manager.cpp  itinerary_manager.hpp
src/application/mappers/: selected_flight_offer_reservation_mapper.hpp  selected_hotel_offer_reservation_mapper.hpp
src/application/payments/: payment_strategy.hpp  square_payment_strategy.hpp  stripe_payment_strategy.hpp
src/application/providers/: air_france_flight_provider.cpp  air_france_flight_provider.hpp  booking_provider.hpp  british_airways_flight_provider.cpp  british_airways_flight_provider.hpp  flight_provider.hpp  hilton_hotel_provider.cpp  hilton_hotel_provider.hpp  hotel_provider.hpp  hotel_search_provider.hpp  marriott_hotel_provider.cpp  marriott_hotel_provider.hpp  reservation_provider.hpp
src/application/repositories/: i_customer_repository.hpp  i_itinerary_repository.hpp  i_user_repository.hpp
src/application/requests/: flight_request.cpp  flight_request.hpp  hotel_request.hpp  reservation_request.hpp
src/application/results/: list_itineraries_result.hpp  pay_itinerary_result.hpp
src/application/services/: auth_service.cpp  auth_service.hpp  payment_service.cpp  payment_service.hpp  reservation_service.cpp  reservation_service.hpp
src/backend/: CMakeLists.txt  airCanadaFlightsManager.cpp  airCanadaFlightsManager.h  airFranceFlightsManager.cpp  airFranceFlightsManager.h  backEnd.cpp  backEnd.h  backend.cpp  backend.h  backend.hpp  britishAirwaysFlightsManager.cpp  britishAirwaysFlightsManager.h  flightsManager.h  hiltonHotelsManager.cpp  hiltonHotelsManager.h  hotelsManager.h  itineraryManager.h  marriottHotelsManager.cpp  marriottHotelsManager.h  paymentStrategy.h  paypalPaymentStrategy.h  squarePaymentStrategy.h  stripePaymentStrategy.h  turkishFlightsManager.cpp  turkishFlightsManager.h
src/composition/: CMakeLists.txt
src/db/: CMakeLists.txt  customer_repository.cpp  customer_repository.hpp  customersManager.cpp  customers_manager.cpp  customers_manager.h  customers_manager.hpp  database.cpp  database.h  database.hpp  id_generator.cpp  id_generator.hpp  itinerariesManager.cpp  itinerariesManager.h  itineraries_manager.cpp  itineraries_manager.hpp  user_repository.cpp  user_repository.hpp  usersManager.cpp  users_manager.cpp  users_manager.h  users_manager.hpp
src/domain/: CMakeLists.txt  request_type.hpp  result.hpp
src/frontend/: CMakeLists.txt  console_frontend.cpp  console_frontend.hpp  flightRequestDataReader.cpp  flightRequestDataReader.h  flight_request_data_reader.cpp  flight_request_data_reader.h  flight_request_data_reader.hpp  frontEnd.cpp  frontEnd.h  frontend.cpp  frontend.h  frontend.hpp  frontend_interface.hpp  hotelRequestDataReader.cpp  hotelRequestDataReader.h  hotel_request_data_reader.cpp  hotel_request_data_reader.h  hotel_request_data_reader.hpp  input.cpp  input.hpp  inputHandler.h  input_handler.cpp  input_handler.hpp  loginHandler.cpp  loginHandler.h  login_handler.cpp  login_handler.hpp  menuPrinter.cpp  menu_printer.cpp  menu_printer.h  menu_printer.hpp  output.cpp  printer.cpp  printer.h  printer.hpp  requestDataReader.h  request_data_reader.cpp  request_data_reader.h  request_data_reader.hpp  (+3 more)
src/infrastructure/: CMakeLists.txt  json_keys.hpp
src/model/: CMakeLists.txt  customer.cpp  customer.h  customer.hpp  flight.cpp  flight.h  flight.hpp  flightRequest.h  flightReservation.cpp  flightReservation.h  hotelRequest.cpp  hotelRequest.h  hotelReservation.cpp  hotelReservation.h  hotelRoom.cpp  hotelRoom.h  hotel_room.cpp  hotel_room.h  hotel_room.hpp  itinerary.cpp  itinerary.h  itinerary.hpp  itineraryItem.cpp  itineraryReservation.h  itinerary_item.cpp  itinerary_item.h  itinerary_item.hpp  paymentCard.cpp  paymentCard.h  payment_card.cpp  payment_card.hpp  reservation.cpp  reservation.h  reservation.hpp  reservationRequest.h  user.cpp  user.h
src/presentation/: CMakeLists.txt  app_state.hpp  console_frontend.cpp  console_frontend.hpp  input.cpp  input.hpp  output.cpp  output.hpp  presenter_helpers.hpp  signup_handler.cpp
src/tests/: CMakeLists.txt  test_create_itinerary.cpp  test_integration.cpp  test_pay_itinerary_use_case.cpp  test_payment_processor.cpp  test_reservation_factory.cpp  test_reservation_serializer.cpp  test_reservation_service.cpp
src/util/: CMakeLists.txt  env_loader.cpp  env_loader.hpp  id_generator.cpp  id_generator.hpp  password_utils.cpp  password_utils.hpp
(+282 files in other folders)
